<resources>
    <string name="app_name">Seven Cells</string>

    <string name="btn_start">Start</string>
    <string name="btn_restart">Restart</string>
    <string name="btn_stop">Stop</string>

    <string name="btn_snapshot">Take Snapshot</string>
    <string name="facebook_app_id">612367816312754</string> <string name="fb_login_protocol_scheme">fb612367816312754</string>

    <string name="msg_save_snapshot_failed">Failed to save snapshot.</string>
    <string name="msg_need_permission">Snapshot need your permission to be saved.</string>


    <string name="info1">Место действия этой игры — «вселенная» — это размеченная на клетки поверхность или плоскость — безграничная, ограниченная, или замкнутая (в пределе — бесконечная плоскость).</string>
    <string name="info2">Каждая клетка на этой поверхности может находиться в двух состояниях: быть «живой» (заполненной) или быть «мёртвой» (пустой). Клетка имеет восемь соседей, окружающих её.</string>
    <string name="info3">Распределение живых клеток в начале игры называется первым поколением. Каждое следующее поколение рассчитывается на основе предыдущего по таким правилам:</string>
    <string name="info4">в пустой (мёртвой) клетке, рядом с которой ровно три живые клетки, зарождается жизнь;</string>
    <string name="info5">если у живой клетки есть две или три живые соседки, то эта клетка продолжает жить; в противном случае, если соседей меньше двух или больше трёх, клетка умирает («от одиночества» или «от перенаселённости»)</string>
    <string name="info6">Игра прекращается, если</string>
    <string name="info7">на поле не останется ни одной «живой» клетки</string>
    <string name="info8">конфигурация на очередном шаге в точности (без сдвигов и поворотов) повторит себя же на одном из более ранних шагов (складывается периодическая конфигурация)</string>
    <string name="info9">при очередном шаге ни одна из клеток не меняет своего состояния (складывается стабильная конфигурация; предыдущее правило, вырожденное до одного шага назад)</string>
    <string name="info10">Эти простые правила приводят к огромному разнообразию форм, которые могут возникнуть в игре.</string>
    <string name="info11">Игрок не принимает прямого участия в игре, а лишь расставляет или генерирует начальную конфигурацию «живых» клеток, которые затем взаимодействуют согласно правилам уже без его участия (он является наблюдателем).</string>


</resources>
